# computational-geometry

./: Cargo.toml  README.md
.github/workflows/: rust.yml
models/: axes.blend  axes.mtl
shaders/: 2d.vs.glsl  3d.vs.glsl  basic.fs.glsl  obj.fs.glsl  obj.vs.glsl  phong.fs.glsl
src/: graphics.rs  main.rs  tests.rs
src/algorithms/: convex_hull_3d.rs  graham_scan.rs  incremental_2d_triangulation.rs  jarvis_march.rs  mod.rs
src/graphics/: axes.rs  mod.rs  orbit_camera.rs  shaders.rs
src/math/: mod.rs  rect.rs  segment2.rs  tests.rs  vec2.rs  vec3.rs
src/ui/: clipboard.rs  manager.rs  mod.rs
src/ui/window/: algorithms.rs  debug.rs  mod.rs
