[package]
name = "computational-geometry"
version = "0.1.0"
authors = ["Axel Cocat <ax.cocat@gmail.com>", "Yohann Jerrain <y.jerrain@gmail.com>"]
edition = "2018"

[dependencies]
glium = "0.25.1"
imgui = { version = "0.3.0-pre", git = "https://github.com/Gekkio/imgui-rs" }
imgui-glium-renderer = { version = "0.3.0-pre", git = "https://github.com/Gekkio/imgui-rs" }
imgui-winit-support = { version = "0.3.0-pre", git = "https://github.com/Gekkio/imgui-rs" }
clipboard = "0.5"
winit = "0.19.5"
rand = "0.7.2"
